--- a/mysalecity/Views/Shared/_Layout.cshtml
+++ b/mysalecity/Views/Shared/_Layout.cshtml
@@ -1,193 +1,126 @@
 ﻿@model IEnumerable<mysalecity.Models.category>
 
-    <!DOCTYPE html>
-    <html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>@ViewBag.Title</title>
-    </head>
-    <body>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title</title>
+</head>
+<body>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="~/Content/bootstrap.css">
+    <!-- Our Custom CSS -->
+    <link rel="stylesheet" href="~/Content/style4.css">
 
-        <!-- Bootstrap CSS-->
-        <link rel="stylesheet" href="~/Content/bootstrap.css">
-        <!-- Our Custom CSS -->
-        <link rel="stylesheet" href="~/Content/style4.css">
+    <div class="wrapper">
 
-        <div class="wrapper">
-
-            @{ if (User.Identity.IsAuthenticated)
-                {
+        @{ if (User.Identity.IsAuthenticated)
+            {
 
 
-                    <!-- Sidebar Holder -->
-                    <nav id="sidebar">
-                        <div class="sidebar-header">
-                            <h3> @Html.ActionLink("MySale.City", "Index", "Home")</h3>
-                            <strong> @Html.ActionLink("MSC", "Index", "Home")</strong>
-                        </div>
-                        <ul class="list-unstyled components">
-                            <li class="active">
-                                @*На будующе: жи есть говной скрипт ваняет. надо написать во сславу Аллаха, брат. Иншаллах!*@
-                                <a href="/Tasks/Index">
-                                    <i class="glyphicon glyphicon-list-alt"></i>
-                                    Все категории
-                                </a>
-                            </li>
+                <!-- Sidebar Holder -->
+                <nav id="sidebar">
+                    <div class="sidebar-header">
+                        <h3> @Html.ActionLink("MySale.City", "Index", "Home")</h3>
+                        <strong> @Html.ActionLink("MSC", "Index", "Home")</strong>
+                    </div>
+                    <ul class="list-unstyled components">
+                        <li class="">
+                            @*На будующе: жи есть говной скрипт ваняет. надо написать во сславу Аллаха, брат. Иншаллах!*@
+                            <a href="/Tasks/Index">
+                                <i class="glyphicon glyphicon-list-alt"></i>
+                                Все категории
+                            </a>
+                        </li>
 
-                            @foreach (var item in Model)
-    {
-                       
+                        @foreach (var item in Model)
+                        {
+
                             <li>
-                                <a href="#foodSubmenu" data-toggle="collapse" aria-expanded="false">
-                                    <i class="glyphicon glyphicon-cutlery"></i>
-                                   @item.name
+                                <a href="#">
+                                    <i class="@item.image"></i>
+                                    @item.name
                                 </a>
-                                <ul class="collapse list-unstyled" id="foodSubmenu">                             
-                                </ul>
-                            </li>                          
-}
-                            <li>
-                                <a href="#foodSubmenu" data-toggle="collapse" aria-expanded="false">
-                                    <i class="glyphicon glyphicon-cutlery"></i>
-                                    Еда
-                                </a>
-                                <ul class="collapse list-unstyled" id="foodSubmenu">
-                                    <li><a href="#">Подкатегория 1</a></li>
-                                    <li><a href="#">Подкатегория 2</a></li>
-                                    <li><a href="#">Подкатегория 3</a></li>
-                                </ul>
                             </li>
-                            <li>
-                                <a href="#moodSubmenu" data-toggle="collapse" aria-expanded="false">
-                                    <i class="glyphicon glyphicon-film"></i>
-                                    Развлечения
-                                </a>
-                                <ul class="collapse list-unstyled" id="moodSubmenu">
-                                    <li><a href="#">Подкатегория 1</a></li>
-                                    <li><a href="#">Подкатегория 2</a></li>
-                                    <li><a href="#">Подкатегория 3</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#clothesSubmenu" data-toggle="collapse" aria-expanded="false">
-                                    <i class="glyphicon glyphicon-question-sign"></i>
-                                    Одежда
-                                </a>
-                                <ul class="collapse list-unstyled" id="clothesSubmenu">
-                                    <li><a href="#">Подкатегория 1</a></li>
-                                    <li><a href="#">Подкатегория 2</a></li>
-                                    <li><a href="#">Подкатегория 3</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#sportSubmenu" data-toggle="collapse" aria-expanded="false">
-                                    <i class="glyphicon glyphicon-tower"></i>
-                                    Спорт
-                                </a>
-                                <ul class="collapse list-unstyled" id="sportSubmenu">
-                                    <li><a href="#">Подкатегория 1</a></li>
-                                    <li><a href="#">Подкатегория 2</a></li>
-                                    <li><a href="#">Подкатегория 3</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#educationSubmenu" data-toggle="collapse" aria-expanded="false">
-                                    <i class="glyphicon glyphicon-book "></i>
-                                    Образование
-                                </a>
-                                <ul class="collapse list-unstyled" id="educationSubmenu">
-                                    <li><a href="#">Подкатегория 1</a></li>
-                                    <li><a href="#">Подкатегория 2</a></li>
-                                    <li><a href="#">Подкатегория 3</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#travelSubmenu" data-toggle="collapse" aria-expanded="false">
-                                    <i class="glyphicon glyphicon-plane"></i>
-                                    Путешествия
-                                </a>
-                                <ul class="collapse list-unstyled" id="travelSubmenu">
-                                    <li><a href="#">Подкатегория 1</a></li>
-                                    <li><a href="#">Подкатегория 2</a></li>
-                                    <li><a href="#">Подкатегория 3</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <ul class="list-unstyled CTAs">
-                            <li><a href="/Tasks/Create" class="createtask">Create new task</a></li>
-                            <li><a href="#" class="Settings">Settings</a></li>
-                        </ul>
-                    </nav>
-                }
+                        }
+
+                    </ul>
+                    <ul class="list-unstyled CTAs">
+                        <li><a href="/Tasks/Create" class="createtask">Create new task</a></li>
+                        <li><a href="#" class="Settings">Settings</a></li>
+                    </ul>
+                </nav>
             }
-            <!-- Page Content Holder -->
-            <div id="content" class=" col-md-12">
-                <nav class="navbar navbar-default">
-                    <div class="container-fluid">
-                        @{ if (User.Identity.IsAuthenticated)
-                            {<div class="navbar-header">
-                                    <button type="button" id="sidebarCollapse" class="btn btn-info">
-                                        <i class="glyphicon glyphicon-th-list"></i>
-                                    </button>
-                                </div>} }
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                            <ul class="nav navbar-nav navbar-right">
-                                @{ if (User.Identity.IsAuthenticated)
-                                    {
+        }
+        <!-- Page Content Holder -->
+        <div id="content" class=" col-md-12">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    @{ if (User.Identity.IsAuthenticated)
+                        {<div class="navbar-header">
+                                <button type="button" id="sidebarCollapse" class="btn btn-info">
+                                    <i class="glyphicon glyphicon-th-list"></i>
+                                </button>
+                            </div>} }
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
+                            @{ if (User.Identity.IsAuthenticated)
+                                {
 
-                                        <li><a href="/Tasks/Index">Задачи</a></li>
+                                    <li><a href="/Tasks/Index">Задачи</a></li>
 
-                                        <li class="">
-                                            <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                                <img src="images/img.jpg" alt="">@User.Identity.Name
-                                                <span class=" fa fa-angle-down"></span>
-                                            </a>
-                                            <ul class="dropdown-menu pull-right">
-                                                <li><a href="javascript:;"> Profile</a></li>
-                                                <li>
-                                                    <a href="javascript:;">
-                                                        <span class="badge bg-red pull-right">50%</span>
-                                                        <span>Settings</span>
-                                                    </a>
-                                                </li>
-                                                <li><a href="javascript:;">Help</a></li>
-                                                <li><a href="Auth/Logout"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
-                                            </ul>
-                                        </li>
-
-                                    }
-
-                                    else
-                                    {
-                                        <li><a href="Auth/Login">Войти</a></li>
-                                    }
+                                    <li class="">
+                                        <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                            <img src="images/img.jpg" alt="">@User.Identity.Name
+                                            <span class=" fa fa-angle-down"></span>
+                                        </a>
+                                        <ul class="dropdown-menu pull-right">
+                                            <li><a href="javascript:;"> Profile</a></li>
+                                            <li>
+                                                <a href="javascript:;">
+                                                    <span class="badge bg-red pull-right">50%</span>
+                                                    <span>Settings</span>
+                                                </a>
+                                            </li>
+                                            <li><a href="javascript:;">Help</a></li>
+                                            <li><a href="Auth/Logout"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                                        </ul>
+                                    </li>
 
                                 }
-                            </ul>
-                        </div>
+
+                                else
+                                {
+                                    <li><a href="Auth/Login">Войти</a></li>
+                                }
+
+                            }
+                        </ul>
                     </div>
-                </nav>
-                <div class="row col-md-12">
-                    @RenderBody()
                 </div>
+            </nav>
+            <div class="row col-md-12">
+                @RenderBody()
             </div>
         </div>
+    </div>
 
 
-        <!-- jQuery CDN -->
-        <script src="~/Scripts/jquery-1.10.2.js"></script>
-        <!-- Bootstrap Js CDN -->
-        <script src="~/Scripts/bootstrap.js"></script>
-        @* @Styles.Render("~/Content/css")*@
-        @Scripts.Render("~/bundles/modernizr")
-        <script type="text/javascript">
-            $(document).ready(function () {
-                $('#sidebarCollapse').on('click', function () {
-                    $('#sidebar').toggleClass('active');
-                });
+    <!-- jQuery CDN -->
+    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <!-- Bootstrap Js CDN -->
+    <script src="~/Scripts/bootstrap.js"></script>
+    @* @Styles.Render("~/Content/css")*@
+    @Scripts.Render("~/bundles/modernizr")
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#sidebarCollapse').on('click', function () {
+                $('#sidebar').toggleClass('active');
             });
-        </script>
-    </body>
+        });
+    </script>
+</body>
 </html>
