--- a/mysalecity/Views/Home/Index.cshtml
+++ b/mysalecity/Views/Home/Index.cshtml
@@ -3,22 +3,47 @@
  
 }
 
-<div class="jumbotron">
-    <h1>Сайт в разработке!</h1>
-    <div class=" col-md-12">
-        <img src="http://clan-video.clan.su/_ph/1/2/527521791.gif" class="img-rounded img-responsive" alt="Сайт в разработке">
+    <div class="filter-dark p-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="text-left  justify-content-center display-2 text-white">Сайт в разработке!</h1>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+    <div class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <img class="card-img-top" src="http://clan-video.clan.su/_ph/1/2/527521791.gif" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">MySale.City Сейчас в разработке</h5>
+                            <p class="card-text">Вы можете связаться с нами, отправив сообщение нам на почту.</p>
+                            <a href="#" class="btn btn-primary btn-block" contenteditable="true">Отправить сообщение</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12"></div>
+            </div>
+        </div>
+    </div>
+   
+    <div class="row">
+        @*<div class="col-md-4">
 
-<div class="row">
-    @*<div class="col-md-4">
-     
+            </div>
+            <div class="col-md-4">
+
+            </div>
+            <div class="col-md-4">
+
+            </div>*@
     </div>
-    <div class="col-md-4">
-      
-    </div>
-    <div class="col-md-4">
-      
-    </div>*@
- 
-</div>
