--- a/mysalecity/Views/Shared/_Layout.cshtml
+++ b/mysalecity/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@model IEnumerable<mysalecity.Models.category>
-
+﻿
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -35,8 +34,7 @@
                                 Все категории
                             </a>
                         </li>
-
-                        @foreach (var item in Model)
+                        @foreach (var item in (List<mysalecity.Models.category>)ViewData["cat"])
                         {
 
                             <li>
@@ -68,34 +66,34 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             @{ if (User.Identity.IsAuthenticated)
-                                {
+        {
 
-                                    <li><a href="/Tasks/Index">Задачи</a></li>
+                        <li><a href="/Tasks/Index">Задачи</a></li>
+                        <li><a href="/Companies/Create">Зарегистрировать компанию</a></li>
+                        <li class="">
+                            <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                <img src="images/img.jpg" alt="">@User.Identity.Name
+                                <span class=" fa fa-angle-down"></span>
+                            </a>
+                            <ul class="dropdown-menu pull-right">
+                                <li><a href="javascript:;"> Profile</a></li>
+                                <li>
+                                    <a href="javascript:;">
+                                        <span class="badge bg-red pull-right">50%</span>
+                                        <span>Settings</span>
+                                    </a>
+                                </li>
+                                <li><a href="javascript:;">Help</a></li>
+                                <li><a href="Auth/Logout"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                            </ul>
+                        </li>
 
-                                    <li class="">
-                                        <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                            <img src="images/img.jpg" alt="">@User.Identity.Name
-                                            <span class=" fa fa-angle-down"></span>
-                                        </a>
-                                        <ul class="dropdown-menu pull-right">
-                                            <li><a href="javascript:;"> Profile</a></li>
-                                            <li>
-                                                <a href="javascript:;">
-                                                    <span class="badge bg-red pull-right">50%</span>
-                                                    <span>Settings</span>
-                                                </a>
-                                            </li>
-                                            <li><a href="javascript:;">Help</a></li>
-                                            <li><a href="Auth/Logout"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
-                                        </ul>
-                                    </li>
+}
 
-                                }
-
-                                else
-                                {
-                                    <li><a href="Auth/Login">Войти</a></li>
-                                }
+else
+{
+                        <li><a href="Auth/Login">Войти</a></li>
+}
 
                             }
                         </ul>
@@ -110,10 +108,11 @@
 
 
     <!-- jQuery CDN -->
-    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script src="~/Scripts/jquery-3.3.1.js"></script>
     <!-- Bootstrap Js CDN -->
-    <script src="~/Scripts/bootstrap.js"></script>
-    @* @Styles.Render("~/Content/css")*@
+    @*  <script src="~/Scripts/bootstrap.js"></script>*@
+     
+
     @Scripts.Render("~/bundles/modernizr")
     <script type="text/javascript">
         $(document).ready(function () {
