--- a/mysalecity/Views/companies/Create.cshtml
+++ b/mysalecity/Views/companies/Create.cshtml
@@ -1,20 +1,19 @@
 ﻿@model mysalecity.Models.company
 
-@{
-    ViewBag.Title = "Create";
+@{  
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Create</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>company</h4>
-        <hr />
+        
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+       
+        
         <div class="form-group">
             @Html.LabelFor(model => model.company_name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -106,11 +105,8 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
+                @Html.ActionLink("К списку", "Index", null, new { @class = "btn btn-primary" })
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
