--- a/mysalecity/Views/companies/Index.cshtml
+++ b/mysalecity/Views/companies/Index.cshtml
@@ -1,100 +1,52 @@
 ﻿@model IEnumerable<mysalecity.Models.company>
 
-@{
-    ViewBag.Title = "Index";
+@{   
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.company_name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.adress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.web_adress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.company_login)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.company_password)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.inn)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.personal_account)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.registration_date)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.paying_time)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.category1.name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.city1.name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.company_status1.name)
-        </th>
-        <th></th>
-    </tr>
+    @foreach (var item in Model)
+    {
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.company_name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.adress)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.web_adress)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.company_login)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.company_password)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.inn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.personal_account)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.registration_date)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.paying_time)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.category1.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.city1.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.company_status1.name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
-        </td>
-    </tr>
-}
 
-</table>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card alert-danger">
+                        <div class="card-header"> @Html.DisplayFor(modelItem => item.company_name) </div>
+                        <div class="card-body">
+                            <h4> @Html.DisplayFor(modelItem => item.category1.name) </h4>
+                            <h6 class="text-muted">
+                                @Html.DisplayFor(modelItem => item.city1.name), @Html.DisplayFor(modelItem => item.adress)
+                            </h6>
+                            <h6 class="text-muted"> @Html.DisplayFor(modelItem => item.web_adress)</h6>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <p>
+                                        @Html.DisplayFor(modelItem => item.company_login)
+                                </p>
+                                <p> 
+                                    @Html.DisplayFor(modelItem => item.company_password)
+                                </p>
+                                </div>
+                                <div class="col-md-6">
+                                    <p>  @Html.DisplayFor(modelItem => item.inn)</p>
+                                    <p> @Html.DisplayFor(modelItem => item.company_status1.name)</p>
+                                </div>
+                            </div>
+                            <div class="btn-group d-flex flex-row justify-content-center align-items-center">
+                                @Html.ActionLink("Изменить", "Edit", new { id = item.id }, new { @class = "btn btn-primary btn-secondary " })
+                                @Html.ActionLink("Детали", "Details", new { id = item.id }, new { @class = "btn btn-success btn-secondary " })
+                                @Html.ActionLink("Удалить", "Delete", new { id = item.id }, new { @class = "btn btn-danger btn-secondary " })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+       <br />
+    
+    }
+       <p>
+           @Html.ActionLink("Создать", "Create", null, new { @class = "btn btn-primary btn-block" })
+       </p>
